# generate-openapi-models

./: Cargo.toml  README.md
src/: command_line_args_utils.rs  constants.rs  dotnet_utils.rs  io_utils.rs  main.rs  models.rs  models_implementations.rs  path_utils.rs  struct_utils.rs  structs_implementations.rs  swagger_utils.rs  types.rs
