[package]
name = "generate-openapi-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
console = "0.15.2"
dialoguer = "0.10.2"
indicatif = "0.17.2"
lazy_static = "1.4.0"
convert_case = "0.6.0"
